DPO-1599: use angular material

--- a/train-history-web/src/app/app.component.html
+++ b/train-history-web/src/app/app.component.html
@@ -1,29 +1,14 @@
-<html>
-<head>
-  <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.css"/>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-</head>
-<body>
 <div class="container" style="margin-top: 20px">
-  <nav class="nav">
-    <h2>Haluan tarkastella:
-      <button routerLink="/trains" class="btn btn-primary" routerLinkActive="active">Aikatauluja</button>
-      <button routerLink="/compositions" class="btn btn-primary" routerLinkActive="active">Kokoonpanoja</button>
-    </h2>
-  </nav>
-  <router-outlet class="container"></router-outlet>
+  <span>Haluan tarkastella: </span>
+  <button mat-raised-button color="primary" routerLink="/trains" class="btn btn-primary" routerLinkActive="active">Aikatauluja</button>
+  <button mat-raised-button color="primary" routerLink="/compositions" class="btn btn-primary" routerLinkActive="active">Kokoonpanoja</button>
 </div>
+
+  <router-outlet class="container"></router-outlet>
+
 <footer class="footer">
-    <span class="text-muted">Historiatietoja säilytetään 14 päivää.</span>
-  <span class="text-muted">Liikennetietojen lähde <a href="https://www.tmfg.fi/">Traffic Management Finland</a> / <a
-      href="http://rata.digitraffic.fi">rata.digitraffic.fi</a>, lisenssi CC 4.0 BY</span> <span>Icons made by <a
-    href="https://www.flaticon.com/authors/kiranshastry" title="Kiranshastry">Kiranshastry</a> from <a
-    href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a
-    href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0"
-    target="_blank">CC 3.0 BY</a></span>
+  <span class="text-muted">Historiatietoja säilytetään 14 päivää.</span>
+  <span class="text-muted">Liikennetietojen lähde <a href="https://www.tmfg.fi/">Traffic Management Finland</a> /
+    <a     href="http://rata.digitraffic.fi">rata.digitraffic.fi</a>, lisenssi CC 4.0 BY</span>
 </footer>
-</body>
-</html>
 
