--- a/train-history-web/src/app/components/train-table/train-table.component.html
+++ b/train-history-web/src/app/components/train-table/train-table.component.html
@@ -1,89 +1,106 @@
-<h1>1. Etsi aikataulu</h1>
-<form>
-  <div class="form-group row">
-    <label class="col-2 col-form-label">Junanumero</label>
-    <div class="col-10">
-      <input class="form-control" type="text" [(ngModel)]="trainNumber" name="trainNumber"/>
-    </div>
+<div class="container">
+  <h1>1. Etsi aikataulu</h1>
+  <mat-form-field appearance="standard">
+    <mat-label>Junanumero</mat-label>
+    <input matInput placeholder="Placeholder" [formControl]="this.trainNumberFormControl">
+    <mat-hint>Esim. IC 46:n junanumero on "46"</mat-hint>
+  </mat-form-field>
+
+  <mat-form-field appearance="standard">
+    <mat-label>Lähtöpäivämäärä</mat-label>
+    <input matInput placeholder="Placeholder" [formControl]="this.departureDateFormControl">
+    <mat-hint>Ensimmäisen lähdön päivämäärä</mat-hint>
+  </mat-form-field>
+
+
+  <div>
+    <button mat-raised-button color="accent" (click)="this.fetchTrain()">Etsi aikataulu</button>
+    <mat-spinner *ngIf="this.loading"></mat-spinner>
   </div>
-  <div class="form-group row">
-    <label for="departure-input" class="col-2 col-form-label">Lähtöpäivämäärä</label>
-    <div class="col-10">
-      <input class="form-control" type="text" [(ngModel)]="departureDate" id="departure-input" name="departureDate"/>
-    </div>
-  </div>
 
-  <button class="btn btn-primary" (click)="fetchTrain()">
-    <i *ngIf="loading" class="fa fa-spinner fa-spin"></i>Etsi aikataulu
-  </button>
-</form>
-<br><br>
+  <ng-container *ngIf="trains != null">
+    <h1>2. Valitse versio</h1>
+    <mat-form-field appearance="standard">
+      <mat-label>Versio</mat-label>
+      <mat-select [formControl]="this.selectedVersionFormControl">
+        <mat-option *ngFor="let c of trains"
+                    [value]="c.json">{{ c.id.fetchDate | date: 'dd.MM.yyyy HH:mm:ss'}} ({{c.version}})
+        </mat-option>
+      </mat-select>
+      <mat-hint>Tippi: voit käyttää nuolinäppäimiä</mat-hint>
+    </mat-form-field>
+  </ng-container>
 
-<h1>2. Valitse versio</h1>
-<div class="form-group">
-  <select class="form-control" [(ngModel)]="selectedTrain">
-    <option selected="selected">Valitse versio</option>
-    <option *ngFor="let c of trains | async" [ngValue]="c">{{ c.id.fetchDate | date: 'dd.MM.yyyy HH:mm:ss'}}:
-      {{c.version}}
-    </option>
-  </select>
-  <small id="passwordHelpBlock" class="form-text text-muted">Tippi: voit selailla versiota eteen-/taaksepäin
-    nuolinäppäimillä focuksen ollessa alasvetovalikossa
-  </small>
-</div>
+  <ng-container *ngIf="this.selectedVersionFormControl.value != null">
+    <small>Operaattori: {{this.selectedVersionFormControl.value?.operatorShortCode}},
+      Tyyppi: {{this.selectedVersionFormControl.value?.trainType}}/{{this.selectedVersionFormControl.value?.trainCategory}},
+      Hyväksytty: {{ this.selectedVersionFormControl.value.timetableAcceptanceDate | date: 'dd.MM.yyyy HH:mm:ss'}},
+      Kulussa: {{this.selectedVersionFormControl.value?.runningCurrently}},
+      Peruttu: {{this.selectedVersionFormControl.value?.cancelled}},
+      Lähilinjatunnus: {{this.selectedVersionFormControl.value?.commuterLineID}}</small>
 
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      <ng-container matColumnDef="stationShortCode">
+        <th mat-header-cell *matHeaderCellDef>Liikennepaikka</th>
+        <td mat-cell *matCellDef="let element"> {{element.stationShortCode}} </td>
+      </ng-container>
 
-<div *ngIf="selectedTrain != null" >
+      <ng-container matColumnDef="commercialTrack">
+        <th mat-header-cell *matHeaderCellDef>Raide</th>
+        <td mat-cell *matCellDef="let element"> {{element.commercialTrack}} </td>
+      </ng-container>
 
-<small>Operaattori: {{selectedTrain?.operatorShortCode}}, Tyyppi: {{selectedTrain?.trainType}}/{{selectedTrain?.trainCategory}}, Lähilinjatunnus: {{selectedTrain?.commuterLineID}}, Hyväksytty: {{ selectedTrain.timetableAcceptanceDate | date: 'dd.MM.yyyy HH:mm:ss'}}, Kulussa: {{selectedTrain?.runningCurrently}}, Peruttu: {{selectedTrain?.cancelled}}</small>
-<br><br>
+      <ng-container matColumnDef="type">
+        <th mat-header-cell *matHeaderCellDef>Tyyppi</th>
+        <td mat-cell *matCellDef="let element"> {{element.type}} </td>
+      </ng-container>
 
-<table class="table table-condensed">
-  <tr>
-    <th>Liikennepaikka</th>
-    <th>Raide</th>
-    <th>Tyyppi</th>
-    <th>Aikatauluaika</th>
-    <th>Toteunut aika</th>
-    <th>Ennuste</th>
-    <th>Ennusteen lähde</th>
-    <th>Ennuste epävarma</th>
-    <th>Peruttu</th>
-    <th>Lähtövalmius</th>
-    <th>Syykoodit</th>
-  </tr>
-  <tr
-    *ngFor="let entity of selectedTrain?.timeTableRows ">
-    <td>{{ entity.stationShortCode }}</td>
-    <td>{{ entity.commercialTrack }}</td>
-    <td>{{ entity.type }}</td>
-    <td>{{ entity.scheduledTime | date: 'HH:mm:ss'}}</td>
-    <td *ngIf="entity?.actualTime != null;else emptyTrainReady">
-      {{ entity.actualTime | date: 'HH:mm:ss' }} ({{ entity.differenceInMinutes }})
-    </td>
-    <td *ngIf="entity?.liveEstimateTime != null;else emptyTrainReady">
-      {{ entity.liveEstimateTime | date: 'HH:mm:ss' }} ({{ entity.differenceInMinutes }})
-    </td>
-    <td>{{ entity.estimateSource }}</td>
-    <td *ngIf="entity?.unknownDelay != null;else emptyTrainReady">
-      {{ entity.unknownDelay }}
-    </td>
-    <td>{{ entity.cancelled }}</td>
+      <ng-container matColumnDef="scheduledTime">
+        <th mat-header-cell *matHeaderCellDef>Aikatauluaika</th>
+        <td mat-cell *matCellDef="let element"> {{element.scheduledTime | date: 'HH:mm:ss'}} </td>
+      </ng-container>
 
+      <ng-container matColumnDef="actualTime">
+        <th mat-header-cell *matHeaderCellDef>Toteutunut aika</th>
+        <td mat-cell *matCellDef="let element"> {{element.actualTime | date: 'HH:mm:ss'}} </td>
+      </ng-container>
 
+      <ng-container matColumnDef="liveEstimateTime">
+        <th mat-header-cell *matHeaderCellDef>Ennuste</th>
+        <td mat-cell  *matCellDef="let element"><span *ngIf="element.liveEstimateTime != null">{{ element.liveEstimateTime | date: 'HH:mm:ss' }} ({{ element.differenceInMinutes }})</span></td>
+      </ng-container>
 
-    <td *ngIf="entity?.trainReady != null;else emptyTrainReady">
-      {{ entity.trainReady.accepted }} ({{ entity.trainReady.source }})
-    </td>
-    <td>
-      <span *ngFor="let c of entity.causes ">
-       {{ c.categoryCode }} {{ c.detailedCategoryCode }} {{c.thirdCategoryCode}}
-      </span>
-    </td>
-    <ng-template #emptyTrainReady>
-      <td>&nbsp;</td>
-    </ng-template>
+      <ng-container matColumnDef="estimateSource">
+        <th mat-header-cell *matHeaderCellDef>Ennusteen lähde</th>
+        <td mat-cell  *matCellDef="let element">{{ element.estimateSource }}</td>
+      </ng-container>
 
-  </tr>
-</table>
+      <ng-container matColumnDef="unknownDelay">
+        <th mat-header-cell *matHeaderCellDef>Ennuste epävarma</th>
+        <td mat-cell  *matCellDef="let element">{{ element.unknownDelay }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="cancelled">
+        <th mat-header-cell *matHeaderCellDef>Peruttu</th>
+        <td mat-cell  *matCellDef="let element">{{ element.cancelled }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="trainReady">
+        <th mat-header-cell *matHeaderCellDef>Lähtövalmius</th>
+        <td mat-cell  *matCellDef="let element"><span *ngIf="element.trainReady != null">{{ element.trainReady.accepted }} ({{ element.trainReady.source }})</span></td>
+      </ng-container>
+
+      <ng-container matColumnDef="causes">
+        <th mat-header-cell *matHeaderCellDef>Syykoodit</th>
+        <td mat-cell *matCellDef="let element">
+          <span *ngFor="let c of element.causes ">
+           {{ c.categoryCode }} {{ c.detailedCategoryCode }} {{c.thirdCategoryCode}}
+          </span>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  </ng-container>
 </div>
