--- a/train-history-web/src/styles.css
+++ b/train-history-web/src/styles.css
@@ -1,9 +1,2 @@
-.footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: lightblue;
-  color: white;
-  text-align: center;
-}
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
