DPO-1599: fixed footer background color

--- a/train-history-web/src/app/app.component.css
+++ b/train-history-web/src/app/app.component.css
@@ -15,7 +15,7 @@
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: ligghtblue;
+  background: lightblue;
   color: black;
   text-align: center;
 }
