--- a/train-history-web/src/app/app.component.html
+++ b/train-history-web/src/app/app.component.html
@@ -8,7 +8,6 @@
 
 <footer class="footer">
   <span class="text-muted">Historiatietoja säilytetään 14 päivää.</span>
-  <span class="text-muted">Liikennetietojen lähde <a href="https://www.tmfg.fi/">Traffic Management Finland</a> /
-    <a     href="https://rata.digitraffic.fi">rata.digitraffic.fi</a>, lisenssi CC 4.0 BY</span>
+  <span class="text-muted">Liikennetietojen lähde <a href="https://www.tmfg.fi/">Traffic Management Finland</a> / <a href="https://rata.digitraffic.fi">rata.digitraffic.fi</a>, lisenssi CC 4.0 BY</span>
 </footer>
 
