Fix styling errors and update corejs

--- a/train-history-web/src/app/components/train-table/train-table.component.scss
+++ b/train-history-web/src/app/components/train-table/train-table.component.scss
@@ -3,9 +3,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-bottom: 32px;
 }
 
 .container > * {
+  width: 250px;
   margin-bottom: 8px;
 }
 
