--- a/train-history-web/src/app/components/train-table/train-table.component.html
+++ b/train-history-web/src/app/components/train-table/train-table.component.html
@@ -87,6 +87,11 @@
         <td mat-cell *matCellDef="let element">{{ element.unknownDelay }}</td>
       </ng-container>
 
+      <ng-container matColumnDef="unknownTrack">
+        <th mat-header-cell *matHeaderCellDef>Raide epävarma</th>
+        <td mat-cell *matCellDef="let element">{{ element.unknownTrack }}</td>
+      </ng-container>
+
       <ng-container matColumnDef="cancelled">
         <th mat-header-cell *matHeaderCellDef>Peruttu</th>
         <td mat-cell *matCellDef="let element">{{ element.cancelled }}</td>
