--- a/train-history-backend/src/sass/_layout.scss
+++ b/train-history-backend/src/sass/_layout.scss
@@ -1,4 +1,7 @@
 .l-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 var(--fds-size-2, 16px);
@@ -6,6 +9,9 @@
 }
 
 .l-main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding: var(--fds-size-3, 24px) 0;
   min-height: 60vh;
 }
@@ -49,7 +55,9 @@
 }
 
 .l-results {
-  margin-top: var(--fds-size-3, 24px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 body {
